TestCases/LLVMTests/SyntaxErrorTests/tests/test15.c
int main() {
int z const = 875213;
}
